compute elementsNb once instead of doing it on every call.